--- a/Debug/index.html
+++ b/Debug/index.html
@@ -57,8 +57,25 @@
 		#controls { flex-direction: column; height: 100%; width: 10%;}
 		#viz { height: 100%; width: 90%;}
 	}
+    .method_prop {
+        display-style:none;
+        overflow: hidden
+    }
+</style>
+<script>
+    $( "method_name" )
+      .change(function () {
+          var str = "";
+          $( "method_name option:selected" ).each(function() {
+            str += $( this ).text() + " ";
+        });
+        $(".method_prop").hide();
+        $("#" + str).show();
+      })
+        .change();
 
-	</style>
+
+</script>
 </head>
 <body>
 	<div id="viz">
@@ -68,10 +85,21 @@
 	<div id="controls">
 		<img id="record" src="img/mic128.png" onclick="toggleRecording(this);">
         <a id="save" href="#"><img src="img/save.svg"></a>
+        Method
+        <select name="method_name">
+             <option value="method_add">add</option>
+                    <option value="method_execute">execute</option>
+                        <option value="method_list">list</option>
+                    </select>
+    <div id="method_add_properties" class="method_prop">
+        <input type="text" id="name" name="name" value="atabox-web-front"/>
+        <input type="text" id="command" name="command" value="pwd"/>
+        <input type="text" id="commandargs" name="commandargs" value=""/>
+    </div>
+    <div id="method_list_properties" class="method_prop">
+    </div>
 
-    <input type="text" id="name" name="name" value="atabox-web-front"/>
-    <input type="text" id="command" name="command" value="pwd"/>
-    <input type="text" id="commandargs" name="commandargs" value=""/>
+    <div id="method_list_execute" class="method_prop">
     </div>
 
 
