weight to properties

--- a/Debug/index.html
+++ b/Debug/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Audio Recorder</title>
+	<title>Atabox Audio Recorder</title>
 
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="js/audiodisplay.js"></script>
