--- a/Debug/index.html
+++ b/Debug/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Atabox Audio Recorder</title>
 
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="js/jquery-2.1.1.min.js"></script>
 	<script src="js/audiodisplay.js"></script>
 	<script src="js/recorderjs/recorder.js"></script>
 	<script src="js/main.js"></script>
@@ -33,7 +33,16 @@
 		justify-content: space-around;
 		height: 20%;
 		width: 100%;
-	}
+    }
+    #methods {
+    
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-around;
+		height: 20%;
+		width: 100%;
+    }
 	#record { height: 15vh; }
 	#record.recording { 
 		background: red;
@@ -129,25 +138,27 @@
 	<div id="controls">
 		<img id="record" src="img/mic128.png" onclick="toggleRecording(this);">
         <a id="save" href="#"><img src="img/save.svg"></a>
-        Method
+    </div>
+    <div id="methods">
+        <h1>Methods:</h1>
         <select name="method_name" id="method_name">
              <option value="method_add">add</option>
-                    <option value="method_execute">execute</option>
-                        <option value="method_list">list</option>
-                    </select>
-    <div id="method_add_properties" class="method_prop">
-        <input type="text" id="name" name="name" value="atabox-web-front"/>
-        <input type="text" id="command" name="command" value="pwd"/>
-        <input type="text" id="commandargs" name="commandargs" value=""/>
-    </div>
-    <div id="method_list_properties" class="method_prop">
-        <button type="button" id="getlist" name="List">Get list</button>
-        <pre id="list_json"></pre>
-    </div>
+             <option value="method_execute">execute</option>
+             <option value="method_list">list</option>
+        </select>
+        <div id="method_add_properties" class="method_prop">
+            <input type="text" id="name" name="name" value="atabox-web-front"/>
+            <input type="text" id="command" name="command" value="pwd"/>
+            <input type="text" id="commandargs" name="commandargs" value=""/>
+        </div>
+        <div id="method_list_properties" class="method_prop">
+            <button type="button" id="getlist" name="List">Get list</button>
+            <pre id="list_json"></pre>
+        </div>
 
-    <div id="method_execute_properties" class="method_prop">
+        <div id="method_execute_properties" class="method_prop">
+        </div>
     </div>
-
 
 </body>
 </html>
