--- a/Release/index.html
+++ b/Release/index.html
@@ -6,6 +6,7 @@
 
 	<script src="js/jquery-2.1.1.min.js"></script>
 	<script src="js/audiodisplay.js"></script>
+	<script src="js/recorderjs/recorderWorker.js"></script>
 	<script src="js/recorderjs/recorder.js"></script>
 	<script src="js/main.js"></script>
 	<style>
